...
        }
    }

    fileprivate var instructions: [InstructionHeadings] {
        [
            InstructionHeadings(
                title: "Indicate budget type",
                subtitle:
                    "The overall budget tracks expenses across the board, while categorical budgets are tied to expenses of a particular type only."
            ),
            InstructionHeadings(
                title: "Select a category",
                subtitle: "Begin by linking this budget to an existing category."
            ),
            InstructionHeadings(
                title: "Choose a time frame",
                subtitle: "The budget will periodically refresh according to your preference."
            ),
            InstructionHeadings(
                title: "Pick a start date",
                subtitle: "Which day of the \(timeFrameString) do you want your budget to start from?"
            ),
            InstructionHeadings(
                title: "Set budget amount",
                subtitle: "Try your best to stay under this limit! Also, feel free to change this in the future."
            ),
        ]
    }

    fileprivate var availableCategoryOptions: [OrdinatioCore.Category] {
...
                        RoundedRectangle(cornerRadius: 13, style: .continuous)
                            .stroke(OrdinatioColor.separator, lineWidth: 1.3)
                    }
                }
        }
        .buttonStyle(BouncyButtonStyle(duration: 0.2, scale: 0.8))
        .accessibilityIdentifier("BudgetComposerContinue")
    }
}

extension BudgetComposerView {
    fileprivate static let ordinalFormatter: NumberFormatter = {
        let formatter = NumberFormatter()
...
